# INSTALACIONES-PRO-PLUS

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  railpack.json  railway.json  requirements.txt
.github/workflows/: ci.yml  tests.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
docs/: README.md  arquitectura.md  flujo-agentes.md  politica-datos.md
docs/architecture/: README.md
docs/curso/: README.md  primera-unidad.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/services/: api.ts
herramientas/: README.md  pipeline_automatizado.py
herramientas/cad/: README.md  generar_plano.sh
herramientas/calculadora/: README.md  index.html
herramientas/calculos/: README.md
herramientas/cotizacion/: README.md  buscador_precios.py  conversor_unidades.py  cotizador_multi_proveedor.py  entrega_academica.py  generar_cotizacion.py  modelos.py  normalizador_materiales.py  requirements.txt
herramientas/simbologia/: README.md  revision_visual_simbologia_dge.md  simbologia_ia.json  simbologia_normativa_dge.json
plantillas/: README.md  inputs_ejemplo.yaml  reporte_tecnico.html
proyectos/: README.md
proyectos/aquiles/: README.md  proyecto.yaml
proyectos/renzo/: CHANGELOG.md  README.md  proyecto.yaml
referencias/: README.md
src/electra/: __init__.py  pyproject.toml
src/electra_core.egg-info/: PKG-INFO  (+3 more)
tests/: README.md  test_caida_tension.py  test_dxf_generator.py  test_integracion_pipeline.py  test_legacy_projects.py  test_topologia.py
(+368 files in other folders)
