[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "electra_core"
version = "0.1.0"
description = "Plataforma automatizada de ingeniería eléctrica y BIM"
authors = [{name = "Principal Architect"}]
dependencies = [
    "pydantic>=2.0",
    "ezdxf>=1.4.0",
    "weasyprint>=60.0",
    "jinja2>=3.1",
    "pandas",
    "pandapower>=2.13",
    "pyyaml",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "mypy"]
bim = ["ifcopenshell"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["electra_core*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
